fix bug overlap balance and address on small screen (#50)

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -22,4 +22,5 @@ $grey: #caccd9;
 $large-breakpoint: 950px;
 $medium-breakpoint: 750px;
 $small-breakpoint: 500px;
+$smaller-breakpoint: 420px;
 $smallest-breakpoint: 320px;
